--- a/client/src/stylesheets/Main.scss
+++ b/client/src/stylesheets/Main.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'BalsamiqSans';
-    src: local('BalsamiqSans'), url(./fonts/BalsamiqSans-Regular.ttf) format('truetype');
+    src: local('BalsamiqSans'), url(./fonts/BalsamiqSans-Regular.ttf);
 }
 
 html,
