--- a/client/src/stylesheets/Main.scss
+++ b/client/src/stylesheets/Main.scss
@@ -16,7 +16,7 @@ h1 {
     text-align: center;
     font-size: 100px;
     color: #FAE289;
-    opacity: 100% !important;
+    opacity: 1 !important;
 }
 
 .split {
